--- a/Feel/Components/Assistant/Assistente.razor
+++ b/Feel/Components/Assistant/Assistente.razor
@@ -1,4 +1,6 @@
-﻿<AssistantMessage CssClass="@($"{WhoIs} {ShowMessages}")" ModalId="30" AssistantChoice="ModalType.AggiungiObiettivo" SitAssistant="SitAssistant" />
+﻿@inherits MainClassBase
+
+<AssistantMessage CssClass="@($"{WhoIs} {ShowMessages}")" ModalId="30" AssistantChoice="ModalType.AggiungiObiettivo" SitAssistant="SitAssistant" />
 <AssistantMessage CssClass="@($"{WhoIs} {ShowMessages}")" ModalId="07" AssistantChoice="ModalType.CambiaTema" SitAssistant="SitAssistant" />
 <AssistantMessage CssClass="@($"{WhoIs} {ShowMessages}")" ModalId="2023" AssistantChoice="ModalType.AreaUtente" SitAssistant="SitAssistant" />
 <AssistantMessage CssClass="@($"{WhoIs} {ShowMessages}")" ModalId="2" AssistantChoice="ModalType.InformazioniApp" SitAssistant="SitAssistant" />
