--- a/Feel/wwwroot/css/partials/_progressCard.scss
+++ b/Feel/wwwroot/css/partials/_progressCard.scss
@@ -4,9 +4,97 @@ $font-scadenza: 0.7rem;
 $font-percentuale: 0.7rem;
 $font-freccia-scadenza: 1.2rem;
 
-.progress-bar-section {
+@mixin progress-card($light, $primary, $gray) {
+        backdrop-filter: blur(2px);
+        background-color: rgba(150, 150, 150, 0.1);
+        border: 1px solid $light-gray;
+        box-shadow: $custom-shadow;
+
+        & .progress-bar-bottle-container {
+            padding: 0.6rem;
+
+            & .progress-card {
+                width: 100%;
+                height: 100%;
+                border-radius: 10px;
+                box-shadow: $custom-shadow;
+                position: relative;
+                background-color: $light;
+
+                & .bottle {
+                    position: absolute;
+                    background-color: rgba($acqua, 0.5);
+                    outline: 2px solid white;
+                    outline-offset: 3px;
+                    width: 30px;
+                    height: 60px;
+                    left: 50%;
+                    bottom: 1.6rem;
+                    transform: translateX(-50%);
+                    display: flex;
+                    justify-content: center;
+                    align-items: end;
+                    overflow: hidden;
+
+                    & .bottle-fill {
+                        width: 100%;
+                        opacity: 0.9;
+                    }
+                }
+
+                & .percentuale {
+                    font-size: $font-percentuale;
+                    font-weight: 600;
+                    position: absolute;
+                    left: 50%;
+                    bottom: 0;
+                    transform: translateX(-50%);
+                    color: $primary;
+                }
+            }
+        }
+
+        & .progress-bar-recap {
+            padding: 1rem;
+            display: flex;
+            flex-direction: column;
+            gap: 0.3rem;
+
+            & span {
+                &:nth-child(1) {
+                    font-size: $font-categoria;
+                    color: $gray;
+                }
+
+                &:nth-child(2) {
+                    font-size: $font-titolo;
+                    font-weight: 600;
+                }
+
+                &:nth-child(3) {
+                    font-size: $font-scadenza;
+                    color: $primary;
+                }
+            }
+        }
+
+        & .go-to-details {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: $font-freccia-scadenza;
+            font-weight: 500;
+
+            &:active {
+                background-color: rgba(100, 100, 100, 0.2);
+                color: white !important;
+            }
+        }
+    }
+
+@mixin completed-card($gray) {
     backdrop-filter: blur(2px);
-    background-color: rgba(150, 150, 150, 0.1);
+    background-color: rgba(182, 255, 0, 0.3);
     border: 1px solid $light-gray;
     box-shadow: $custom-shadow;
 
@@ -19,6 +107,7 @@ $font-freccia-scadenza: 1.2rem;
             border-radius: 10px;
             box-shadow: $custom-shadow;
             position: relative;
+            background-color: greenyellow;
 
             & .bottle {
                 position: absolute;
@@ -48,6 +137,7 @@ $font-freccia-scadenza: 1.2rem;
                 left: 50%;
                 bottom: 0;
                 transform: translateX(-50%);
+                color: $success;
             }
         }
     }
@@ -61,16 +151,18 @@ $font-freccia-scadenza: 1.2rem;
         & span {
             &:nth-child(1) {
                 font-size: $font-categoria;
-                color: $secondary;
+                color: $gray;
             }
 
             &:nth-child(2) {
                 font-size: $font-titolo;
+                color: $gray;
                 font-weight: 600;
             }
 
             &:nth-child(3) {
                 font-size: $font-scadenza;
+                color: $success;
             }
         }
     }
@@ -81,6 +173,7 @@ $font-freccia-scadenza: 1.2rem;
         align-items: center;
         font-size: $font-freccia-scadenza;
         font-weight: 500;
+        color: $success;
 
         &:active {
             background-color: rgba(100, 100, 100, 0.2);
@@ -89,23 +182,35 @@ $font-freccia-scadenza: 1.2rem;
     }
 }
 
-@include media-query($tablet) {
-    .recap-box {
-        padding-inline: 1.5rem !important;
-        padding-block: 0.5rem !important;
+    @include media-query($tablet) {
+        .recap-box {
+            padding-inline: 1.5rem !important;
+            padding-block: 0.5rem !important;
+        }
+    }
+
+    @include media-query($laptop) {
+        .recap-box {
+            padding-inline: 1.5rem !important;
+            padding-block: 0.5rem !important;
+        }
+    }
+
+    @include media-query($desktop) {
+        .recap-box {
+            padding-inline: 1.5rem !important;
+            padding-block: 0.5rem !important;
+        }
+    }
+
+
+.progress-bar-section {
+    &.autunno {
+        @include progress-card($autunno-feel-light, $autunno-feel-primary, $autunno-feel-gray)
+    }
+
+    &.completed {
+        @include completed-card($autunno-feel-gray)
     }
 }
 
-@include media-query($laptop) {
-    .recap-box {
-        padding-inline: 1.5rem !important;
-        padding-block: 0.5rem !important;
-    }
-}
-
-@include media-query($desktop) {
-    .recap-box {
-        padding-inline: 1.5rem !important;
-        padding-block: 0.5rem !important;
-    }
-}
