--- a/Feel/wwwroot/css/style.css
+++ b/Feel/wwwroot/css/style.css
@@ -349,78 +349,6 @@ main .main-section {
   }
 }
 
-.progress-bar-section {
-  backdrop-filter: blur(2px);
-  background-color: rgba(150, 150, 150, 0.1);
-  border: 1px solid #C8C3B9;
-  box-shadow: 2px 2px 5px rgba(100, 100, 100, 0.3);
-}
-.progress-bar-section .progress-bar-bottle-container {
-  padding: 0.6rem;
-}
-.progress-bar-section .progress-bar-bottle-container .progress-card {
-  width: 100%;
-  height: 100%;
-  border-radius: 10px;
-  box-shadow: 2px 2px 5px rgba(100, 100, 100, 0.3);
-  position: relative;
-}
-.progress-bar-section .progress-bar-bottle-container .progress-card .bottle {
-  position: absolute;
-  background-color: rgba(180, 205, 190, 0.5);
-  outline: 2px solid white;
-  outline-offset: 3px;
-  width: 30px;
-  height: 60px;
-  left: 50%;
-  bottom: 1.6rem;
-  transform: translateX(-50%);
-  display: flex;
-  justify-content: center;
-  align-items: end;
-  overflow: hidden;
-}
-.progress-bar-section .progress-bar-bottle-container .progress-card .bottle .bottle-fill {
-  width: 100%;
-  opacity: 0.9;
-}
-.progress-bar-section .progress-bar-bottle-container .progress-card .percentuale {
-  font-size: 0.7rem;
-  font-weight: 600;
-  position: absolute;
-  left: 50%;
-  bottom: 0;
-  transform: translateX(-50%);
-}
-.progress-bar-section .progress-bar-recap {
-  padding: 1rem;
-  display: flex;
-  flex-direction: column;
-  gap: 0.3rem;
-}
-.progress-bar-section .progress-bar-recap span:nth-child(1) {
-  font-size: 0.7rem;
-  color: #6c757d;
-}
-.progress-bar-section .progress-bar-recap span:nth-child(2) {
-  font-size: 0.8rem;
-  font-weight: 600;
-}
-.progress-bar-section .progress-bar-recap span:nth-child(3) {
-  font-size: 0.7rem;
-}
-.progress-bar-section .go-to-details {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 1.2rem;
-  font-weight: 500;
-}
-.progress-bar-section .go-to-details:active {
-  background-color: rgba(100, 100, 100, 0.2);
-  color: white !important;
-}
-
 @media only screen and (max-width: 991px) {
   .recap-box {
     padding-inline: 1.5rem !important;
@@ -439,6 +367,157 @@ main .main-section {
     padding-block: 0.5rem !important;
   }
 }
+.progress-bar-section.autunno {
+  backdrop-filter: blur(2px);
+  background-color: rgba(150, 150, 150, 0.1);
+  border: 1px solid #C8C3B9;
+  box-shadow: 2px 2px 5px rgba(100, 100, 100, 0.3);
+}
+.progress-bar-section.autunno .progress-bar-bottle-container {
+  padding: 0.6rem;
+}
+.progress-bar-section.autunno .progress-bar-bottle-container .progress-card {
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  box-shadow: 2px 2px 5px rgba(100, 100, 100, 0.3);
+  position: relative;
+  background-color: #F6DCA1;
+}
+.progress-bar-section.autunno .progress-bar-bottle-container .progress-card .bottle {
+  position: absolute;
+  background-color: rgba(180, 205, 190, 0.5);
+  outline: 2px solid white;
+  outline-offset: 3px;
+  width: 30px;
+  height: 60px;
+  left: 50%;
+  bottom: 1.6rem;
+  transform: translateX(-50%);
+  display: flex;
+  justify-content: center;
+  align-items: end;
+  overflow: hidden;
+}
+.progress-bar-section.autunno .progress-bar-bottle-container .progress-card .bottle .bottle-fill {
+  width: 100%;
+  opacity: 0.9;
+}
+.progress-bar-section.autunno .progress-bar-bottle-container .progress-card .percentuale {
+  font-size: 0.7rem;
+  font-weight: 600;
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  transform: translateX(-50%);
+  color: #82181A;
+}
+.progress-bar-section.autunno .progress-bar-recap {
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0.3rem;
+}
+.progress-bar-section.autunno .progress-bar-recap span:nth-child(1) {
+  font-size: 0.7rem;
+  color: #6c757d;
+}
+.progress-bar-section.autunno .progress-bar-recap span:nth-child(2) {
+  font-size: 0.8rem;
+  font-weight: 600;
+}
+.progress-bar-section.autunno .progress-bar-recap span:nth-child(3) {
+  font-size: 0.7rem;
+  color: #82181A;
+}
+.progress-bar-section.autunno .go-to-details {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.2rem;
+  font-weight: 500;
+}
+.progress-bar-section.autunno .go-to-details:active {
+  background-color: rgba(100, 100, 100, 0.2);
+  color: white !important;
+}
+.progress-bar-section.completed {
+  backdrop-filter: blur(2px);
+  background-color: rgba(182, 255, 0, 0.3);
+  border: 1px solid #C8C3B9;
+  box-shadow: 2px 2px 5px rgba(100, 100, 100, 0.3);
+}
+.progress-bar-section.completed .progress-bar-bottle-container {
+  padding: 0.6rem;
+}
+.progress-bar-section.completed .progress-bar-bottle-container .progress-card {
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  box-shadow: 2px 2px 5px rgba(100, 100, 100, 0.3);
+  position: relative;
+  background-color: greenyellow;
+}
+.progress-bar-section.completed .progress-bar-bottle-container .progress-card .bottle {
+  position: absolute;
+  background-color: rgba(180, 205, 190, 0.5);
+  outline: 2px solid white;
+  outline-offset: 3px;
+  width: 30px;
+  height: 60px;
+  left: 50%;
+  bottom: 1.6rem;
+  transform: translateX(-50%);
+  display: flex;
+  justify-content: center;
+  align-items: end;
+  overflow: hidden;
+}
+.progress-bar-section.completed .progress-bar-bottle-container .progress-card .bottle .bottle-fill {
+  width: 100%;
+  opacity: 0.9;
+}
+.progress-bar-section.completed .progress-bar-bottle-container .progress-card .percentuale {
+  font-size: 0.7rem;
+  font-weight: 600;
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  transform: translateX(-50%);
+  color: #198754;
+}
+.progress-bar-section.completed .progress-bar-recap {
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0.3rem;
+}
+.progress-bar-section.completed .progress-bar-recap span:nth-child(1) {
+  font-size: 0.7rem;
+  color: #6c757d;
+}
+.progress-bar-section.completed .progress-bar-recap span:nth-child(2) {
+  font-size: 0.8rem;
+  color: #6c757d;
+  font-weight: 600;
+}
+.progress-bar-section.completed .progress-bar-recap span:nth-child(3) {
+  font-size: 0.7rem;
+  color: #198754;
+}
+.progress-bar-section.completed .go-to-details {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.2rem;
+  font-weight: 500;
+  color: #198754;
+}
+.progress-bar-section.completed .go-to-details:active {
+  background-color: rgba(100, 100, 100, 0.2);
+  color: white !important;
+}
+
 .assistente {
   position: fixed;
   z-index: 14;
