--- a/Feel/Pages/DashBoard.razor
+++ b/Feel/Pages/DashBoard.razor
@@ -4,15 +4,17 @@
 
 <div class="container-fluid">
     <DashboardMessage />
-    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 row-cols-xl-4 gap-2 gap-md-0">
 
-        @if(Obiettivi is not null)
+    <Filtro ListaObiettivi="@Obiettivi" OnListaFiltrata="AggiornaListaFiltrata" />
+
+    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 row-cols-xl-4 gap-2 gap-md-0">
+        @if (ObiettiviFiltrati is not null)
         {
-            @foreach (var obiettivo in Obiettivi)
+            @foreach (var obiettivo in ObiettiviFiltrati)
             {
                 <ProgressCard Obiettivo="@obiettivo" />
             }
-        }        
+        }
     </div>
 </div>
 
