--- a/Feel/wwwroot/css/style.scss
+++ b/Feel/wwwroot/css/style.scss
@@ -96,6 +96,7 @@ input[type=number] {
 @import "partials/_tooltip.scss";
 @import "partials/_dashboardMessage.scss";
 @import "partials/_recap.scss";
+@import "partials/_filter.scss";
 // Classe con tutti gli elementi da aggiornare con i temi
 @import "partials/_allElements.scss";
 
