--- a/Feel/Components/DashboardMessage.razor
+++ b/Feel/Components/DashboardMessage.razor
@@ -5,7 +5,7 @@
         <div class="@($"dash-message {MainTheme}")">
         <div>
             <span>@Localizer[ResourceLanguage.Ciao]</span>
-            <h1 class="m-0">@($"{User?.Name},")</h1>
+            <h1 class="m-0">@($"{User?.Name}")</h1>
         </div>
             <span>@($"{Localizer[ResourceLanguage.DashboardEccoObiettivi]} 🎯")</span>
         </div>
