--- a/Feel/Layout/MainLayout.razor
+++ b/Feel/Layout/MainLayout.razor
@@ -1,13 +1,13 @@
 ﻿@using Feel.Components.Assistant
 @inherits LayoutComponentBase
 
-@if (MainTheme is not null)
+@if (User is not null)
 {
-    <CascadingValue Value="MainTheme" Name="MainTheme">
-        <CascadingValue Value="Assistente" Name="Assistente">
+    <CascadingValue Value="@User?.Tema?.Nome" Name="MainTheme">
+        <CascadingValue Value="@User?.Assistente?.PicName" Name="Assistente">
             <CascadingValue Value="User" Name="User">
             <div id="modal-container"></div>
-            <main class="@($"bg-{MainTheme}-feel-main-bg")">
+                <main class="@($"bg-{@User?.Tema?.Nome}-feel-main-bg")">
                 <div class="main-gradient" />
                 <div class="main-content">
                     <section class="main-section">
