--- a/Feel/Pages/DashBoard.razor
+++ b/Feel/Pages/DashBoard.razor
@@ -18,3 +18,7 @@
     </div>
 </div>
 
+
+@* Stringa da usare per codice html nel localizer *@
+<div>@((MarkupString)Localizer[ResourceLanguage.Aggiornamento].Value)</div>
+
