--- a/Feel/wwwroot/css/partials/_progressCard.scss
+++ b/Feel/wwwroot/css/partials/_progressCard.scss
@@ -1,5 +1,5 @@
 ﻿$font-categoria: 0.7rem;
-$font-titolo: 0.8rem;
+$font-titolo: 0.7rem;
 $font-scadenza: 0.7rem;
 $font-percentuale: 0.7rem;
 $font-freccia-scadenza: 1.2rem;
@@ -68,6 +68,7 @@ $font-freccia-scadenza: 1.2rem;
 
                 &:nth-child(2) {
                     font-size: $font-titolo;
+                    color: $primary;
                     font-weight: 600;
                 }
 
@@ -92,7 +93,7 @@ $font-freccia-scadenza: 1.2rem;
         }
     }
 
-@mixin completed-card($gray) {
+@mixin completed-card($gray, $primary) {
     backdrop-filter: blur(2px);
     background-color: rgba(182, 255, 0, 0.3);
     border: 1px solid $light-gray;
@@ -156,7 +157,7 @@ $font-freccia-scadenza: 1.2rem;
 
             &:nth-child(2) {
                 font-size: $font-titolo;
-                color: $gray;
+                color: $primary;
                 font-weight: 600;
             }
 
@@ -210,7 +211,7 @@ $font-freccia-scadenza: 1.2rem;
     }
 
     &.completed {
-        @include completed-card($autunno-feel-gray)
+        @include completed-card($autunno-feel-gray, $autunno-feel-primary)
     }
 }
 
