--- a/Feel/wwwroot/css/partials/_allElements.scss
+++ b/Feel/wwwroot/css/partials/_allElements.scss
@@ -1,6 +1,7 @@
-﻿namespace Feel.wwwroot.css.partials
-{
-    public class _allElements
-    {
+﻿// ASSISTENTE
+
+.assistente {
+    &.autunno {
+        @include assistente($autunno-feel-ultra-light, $autunno-feel-primary, $autunno-feel-secondary);
     }
 }
