--- a/Feel/wwwroot/css/partials/_mixins.scss
+++ b/Feel/wwwroot/css/partials/_mixins.scss
@@ -57,3 +57,46 @@
         }
     }
 }
+
+// MESSAGGI ASSISTENTE
+
+@mixin messaggio-text($ultra-light, $primary, $secondary) {
+
+    &.message-box {
+        background-color: $secondary !important;
+
+        & .message-text {
+            font-size: 0.8rem;
+            color: $ultra-light;
+        }
+
+        &:active {
+            background-color: $primary !important;
+        }
+    }
+}
+
+@mixin assistente-messaggio($translateY, $translateX, $rotate, $scale: 1) {
+    position: fixed;
+    z-index: 15;
+    bottom: 0;
+    left: 0;
+    transform: translateY($translateY) translateX($translateX) rotate($rotate) scale($scale);
+    padding: 1rem 1.5rem;
+    border-radius: 50px;
+    box-shadow: $custom-shadow;
+    transition: transform 300ms ease-out;
+    display: none;
+    opacity: 0;
+
+
+
+    &:active {
+        transform: translateY($translateY) translateX($translateX) rotate($rotate) scale(1.1);
+    }
+
+    &.show {
+        display: block;
+        @include appear(300ms);
+    }
+}
