--- a/Feel/wwwroot/css/partials/_allElements.scss
+++ b/Feel/wwwroot/css/partials/_allElements.scss
@@ -5,3 +5,15 @@
         @include assistente($autunno-feel-ultra-light, $autunno-feel-primary, $autunno-feel-secondary);
     }
 }
+
+// FORM //
+
+// Checkbox
+.cm-checkbox {
+    &.autunno {
+        @include checkbox-style($autunno-feel-light, $autunno-feel-primary);
+    }
+}
+
+// Checkradio
+
