--- a/Feel/wwwroot/css/style.css
+++ b/Feel/wwwroot/css/style.css
@@ -156,29 +156,10 @@ input[type=number] {
   -o-transition: ease 0.3s;
 }
 
-.red:checked:after {
-  background: #dc281e;
-}
-
-.blue:checked:after {
-  background: #396afc;
-}
-
-.orange:checked:after {
-  background: #fc4a1a;
-}
-
-.purple:checked:after {
-  background: #f953c6;
-}
-
-.autunno-feel-light:checked:after {
+.autunno-radio:checked:after {
   background: #F6DCA1;
 }
 
-/*
-<input type="checkbox" name="checkbox" class="cm-toggle red" checked > 
-*/
 /*// SCROLLBAR ARANCIONE*/
 /* Scrollbar per Chrome, Edge, Safari */
 /*::-webkit-scrollbar {
