--- a/Feel/wwwroot/css/partials/_checkRadio.scss
+++ b/Feel/wwwroot/css/partials/_checkRadio.scss
@@ -1,6 +1,6 @@
 ﻿/* RADIO BUTTON */
 
-.cm-toggle {
+@mixin radio($light) {
     -webkit-appearance: none;
     -webkit-tap-highlight-color: transparent;
     position: relative;
@@ -8,55 +8,49 @@
     outline: 0;
     cursor: pointer;
     margin: 10px;
-}
 
-.cm-toggle:after {
-    content: '';
-    width: 60px;
-    height: 28px;
-    display: inline-block;
-    background: rgba(196, 195, 195, 0.55);
-    border-radius: 18px;
-    clear: both;
-}
+    &::after {
+        content: '';
+        width: 60px;
+        height: 28px;
+        display: inline-block;
+        background: rgba(196, 195, 195, 0.55);
+        border-radius: 18px;
+        clear: both;
+    }
 
-.cm-toggle:before {
-    content: '';
-    width: 32px;
-    height: 32px;
-    display: block;
-    position: absolute;
-    left: 0;
-    top: -3px;
-    border-radius: 50%;
-    background: rgb(255, 255, 255);
-    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.6);
-}
+    &::before {
+        content: '';
+        width: 32px;
+        height: 32px;
+        display: block;
+        position: absolute;
+        left: 0;
+        top: -3px;
+        border-radius: 50%;
+        background: rgb(255, 255, 255);
+        box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.6);
+    }
 
-.cm-toggle:checked:before {
-    left: 32px;
-    box-shadow: -1px 1px 3px rgba(0, 0, 0, 0.6);
-}
+    &:checked::before {
+        left: 32px;
+        box-shadow: -1px 1px 3px rgba(0, 0, 0, 0.6);
+    }
 
-.cm-toggle:checked:after {
-    background: #16a085;
-}
+    &:checked::after {
+        background: $light;
+    }
 
-.cm-toggle,
-.cm-toggle:before,
-.cm-toggle:after,
-.cm-toggle:checked:before,
-.cm-toggle:checked:after {
-    transition: ease .3s;
-    -webkit-transition: ease .3s;
-    -moz-transition: ease .3s;
-    -o-transition: ease .3s;
-}
-
-
-
-.autunno-radio:checked:after {
-    background: $autunno-feel-light;
+    &,
+    &::before,
+    &:after,
+    &:checked::before,
+    &:checked::after {
+        transition: ease .3s;
+        -webkit-transition: ease .3s;
+        -moz-transition: ease .3s;
+        -o-transition: ease .3s;
+    }
 }
 
 
