--- a/Feel/wwwroot/css/style.css
+++ b/Feel/wwwroot/css/style.css
@@ -103,63 +103,6 @@ input[type=number] {
 }
 
 /* RADIO BUTTON */
-.cm-toggle {
-  -webkit-appearance: none;
-  -webkit-tap-highlight-color: transparent;
-  position: relative;
-  border: 0;
-  outline: 0;
-  cursor: pointer;
-  margin: 10px;
-}
-
-.cm-toggle:after {
-  content: "";
-  width: 60px;
-  height: 28px;
-  display: inline-block;
-  background: rgba(196, 195, 195, 0.55);
-  border-radius: 18px;
-  clear: both;
-}
-
-.cm-toggle:before {
-  content: "";
-  width: 32px;
-  height: 32px;
-  display: block;
-  position: absolute;
-  left: 0;
-  top: -3px;
-  border-radius: 50%;
-  background: rgb(255, 255, 255);
-  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.6);
-}
-
-.cm-toggle:checked:before {
-  left: 32px;
-  box-shadow: -1px 1px 3px rgba(0, 0, 0, 0.6);
-}
-
-.cm-toggle:checked:after {
-  background: #16a085;
-}
-
-.cm-toggle,
-.cm-toggle:before,
-.cm-toggle:after,
-.cm-toggle:checked:before,
-.cm-toggle:checked:after {
-  transition: ease 0.3s;
-  -webkit-transition: ease 0.3s;
-  -moz-transition: ease 0.3s;
-  -o-transition: ease 0.3s;
-}
-
-.autunno-radio:checked:after {
-  background: #F6DCA1;
-}
-
 /*// SCROLLBAR ARANCIONE*/
 /* Scrollbar per Chrome, Edge, Safari */
 /*::-webkit-scrollbar {
@@ -1193,6 +1136,50 @@ main .main-section {
   font-size: 3rem;
   font-weight: bold;
   color: forestgreen;
+}
+
+.cm-toggle.autunno {
+  -webkit-appearance: none;
+  -webkit-tap-highlight-color: transparent;
+  position: relative;
+  border: 0;
+  outline: 0;
+  cursor: pointer;
+  margin: 10px;
+}
+.cm-toggle.autunno::after {
+  content: "";
+  width: 60px;
+  height: 28px;
+  display: inline-block;
+  background: rgba(196, 195, 195, 0.55);
+  border-radius: 18px;
+  clear: both;
+}
+.cm-toggle.autunno::before {
+  content: "";
+  width: 32px;
+  height: 32px;
+  display: block;
+  position: absolute;
+  left: 0;
+  top: -3px;
+  border-radius: 50%;
+  background: rgb(255, 255, 255);
+  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.6);
+}
+.cm-toggle.autunno:checked::before {
+  left: 32px;
+  box-shadow: -1px 1px 3px rgba(0, 0, 0, 0.6);
+}
+.cm-toggle.autunno:checked::after {
+  background: #F6DCA1;
+}
+.cm-toggle.autunno, .cm-toggle.autunno::before, .cm-toggle.autunno:after, .cm-toggle.autunno:checked::before, .cm-toggle.autunno:checked::after {
+  transition: ease 0.3s;
+  -webkit-transition: ease 0.3s;
+  -moz-transition: ease 0.3s;
+  -o-transition: ease 0.3s;
 }
 
 /*!
