--- a/Feel/wwwroot/css/style.css
+++ b/Feel/wwwroot/css/style.css
@@ -78,11 +78,6 @@ input[type=number] {
     transform: rotate(-22deg);
   }
 }
-.modal-footer.autunno {
-  border-top: 2px solid #F6DCA1;
-  margin-top: 2.5rem;
-}
-
 .waiting-container {
   position: fixed;
   top: 0;
@@ -265,158 +260,6 @@ main .main-section {
     padding-block: 0.5rem !important;
   }
 }
-.progress-bar-section.autunno {
-  backdrop-filter: blur(2px);
-  background-color: rgba(150, 150, 150, 0.1);
-  border: 1px solid #C8C3B9;
-  box-shadow: 2px 2px 5px rgba(100, 100, 100, 0.3);
-}
-.progress-bar-section.autunno .progress-bar-bottle-container {
-  padding: 0.6rem;
-}
-.progress-bar-section.autunno .progress-bar-bottle-container .progress-card {
-  width: 100%;
-  height: 100%;
-  border-radius: 10px;
-  box-shadow: 2px 2px 5px rgba(100, 100, 100, 0.3);
-  position: relative;
-  background-color: #F6DCA1;
-}
-.progress-bar-section.autunno .progress-bar-bottle-container .progress-card .bottle {
-  position: absolute;
-  background-color: rgba(180, 205, 190, 0.5);
-  outline: 2px solid white;
-  outline-offset: 3px;
-  width: 30px;
-  height: 60px;
-  left: 50%;
-  bottom: 1.6rem;
-  transform: translateX(-50%);
-  display: flex;
-  justify-content: center;
-  align-items: end;
-  overflow: hidden;
-}
-.progress-bar-section.autunno .progress-bar-bottle-container .progress-card .bottle .bottle-fill {
-  width: 100%;
-  opacity: 0.9;
-}
-.progress-bar-section.autunno .progress-bar-bottle-container .progress-card .percentuale {
-  font-size: 0.7rem;
-  font-weight: 600;
-  position: absolute;
-  left: 50%;
-  bottom: 0;
-  transform: translateX(-50%);
-  color: #82181A;
-}
-.progress-bar-section.autunno .progress-bar-recap {
-  padding: 1rem;
-  display: flex;
-  flex-direction: column;
-  gap: 0.3rem;
-}
-.progress-bar-section.autunno .progress-bar-recap span:nth-child(1) {
-  font-size: 0.7rem;
-  color: #6c757d;
-}
-.progress-bar-section.autunno .progress-bar-recap span:nth-child(2) {
-  font-size: 0.7rem;
-  color: #82181A;
-  font-weight: 600;
-}
-.progress-bar-section.autunno .progress-bar-recap span:nth-child(3) {
-  font-size: 0.7rem;
-  color: #82181A;
-}
-.progress-bar-section.autunno .go-to-details {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 1.2rem;
-  font-weight: 500;
-}
-.progress-bar-section.autunno .go-to-details:active {
-  background-color: rgba(100, 100, 100, 0.2);
-  color: white !important;
-}
-.progress-bar-section.completed {
-  backdrop-filter: blur(2px);
-  background-color: rgba(182, 255, 0, 0.3);
-  border: 1px solid #C8C3B9;
-  box-shadow: 2px 2px 5px rgba(100, 100, 100, 0.3);
-}
-.progress-bar-section.completed .progress-bar-bottle-container {
-  padding: 0.6rem;
-}
-.progress-bar-section.completed .progress-bar-bottle-container .progress-card {
-  width: 100%;
-  height: 100%;
-  border-radius: 10px;
-  box-shadow: 2px 2px 5px rgba(100, 100, 100, 0.3);
-  position: relative;
-  background-color: greenyellow;
-}
-.progress-bar-section.completed .progress-bar-bottle-container .progress-card .bottle {
-  position: absolute;
-  background-color: rgba(180, 205, 190, 0.5);
-  outline: 2px solid white;
-  outline-offset: 3px;
-  width: 30px;
-  height: 60px;
-  left: 50%;
-  bottom: 1.6rem;
-  transform: translateX(-50%);
-  display: flex;
-  justify-content: center;
-  align-items: end;
-  overflow: hidden;
-}
-.progress-bar-section.completed .progress-bar-bottle-container .progress-card .bottle .bottle-fill {
-  width: 100%;
-  opacity: 0.9;
-}
-.progress-bar-section.completed .progress-bar-bottle-container .progress-card .percentuale {
-  font-size: 0.7rem;
-  font-weight: 600;
-  position: absolute;
-  left: 50%;
-  bottom: 0;
-  transform: translateX(-50%);
-  color: #198754;
-}
-.progress-bar-section.completed .progress-bar-recap {
-  padding: 1rem;
-  display: flex;
-  flex-direction: column;
-  gap: 0.3rem;
-}
-.progress-bar-section.completed .progress-bar-recap span:nth-child(1) {
-  font-size: 0.7rem;
-  color: #6c757d;
-}
-.progress-bar-section.completed .progress-bar-recap span:nth-child(2) {
-  font-size: 0.7rem;
-  color: #82181A;
-  font-weight: 600;
-}
-.progress-bar-section.completed .progress-bar-recap span:nth-child(3) {
-  font-size: 0.7rem;
-  color: #198754;
-}
-.progress-bar-section.completed .go-to-details {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 1.2rem;
-  font-weight: 500;
-  color: #198754;
-}
-.progress-bar-section.completed .go-to-details:active {
-  background-color: rgba(100, 100, 100, 0.2);
-  color: white !important;
-}
-
 .form-display {
   gap: 2rem;
   margin-top: 1.5rem !important;
@@ -557,25 +400,6 @@ main .main-section {
   opacity: 1;
 }
 
-.dash-message.autunno h1, .dash-message.autunno .h1 {
-  color: #F54A00;
-}
-.dash-message.autunno span {
-  font-weight: 500 !important;
-}
-.dash-message.autunno span:last-child {
-  margin-left: 2rem;
-  font-style: italic;
-}
-.dash-message.autunno div {
-  display: flex;
-  align-items: end;
-  gap: 0.5rem;
-}
-.dash-message.autunno div span {
-  font-weight: 700 !important;
-}
-
 .recap.autunno {
   color: #F6DCA1;
   display: flex;
@@ -600,29 +424,6 @@ main .main-section {
   margin-bottom: 1rem;
   padding-bottom: 1rem;
   border-bottom: 2px dashed #F6DCA1;
-}
-
-.filterbox.autunno .filtertitle {
-  color: #F54A00;
-  font-style: italic;
-  text-decoration: underline;
-  font-weight: 400;
-}
-.filterbox.autunno .filterform label {
-  font-size: 0.8rem;
-  font-weight: 600;
-}
-.filterbox.autunno .filteractives .badge {
-  background-color: #F54A00;
-  color: #fff;
-  margin-left: 1rem;
-}
-.filterbox.autunno .filteractives .badge:first-child {
-  margin-left: 0;
-}
-.filterbox.autunno .filteractives button {
-  color: #F54A00 !important;
-  margin-left: 0.5rem;
 }
 
 .assistente.autunno {
@@ -1180,6 +981,205 @@ main .main-section {
   -webkit-transition: ease 0.3s;
   -moz-transition: ease 0.3s;
   -o-transition: ease 0.3s;
+}
+
+.dash-message.autunno h1, .dash-message.autunno .h1 {
+  color: #F54A00;
+}
+.dash-message.autunno span {
+  font-weight: 500 !important;
+}
+.dash-message.autunno span:last-child {
+  margin-left: 2rem;
+  font-style: italic;
+}
+.dash-message.autunno div {
+  display: flex;
+  align-items: end;
+  gap: 0.5rem;
+}
+.dash-message.autunno div span {
+  font-weight: 700 !important;
+}
+
+.filterbox.autunno .filtertitle {
+  color: #F54A00;
+  font-style: italic;
+  text-decoration: underline;
+  font-weight: 400;
+}
+.filterbox.autunno .filterform label {
+  font-size: 0.8rem;
+  font-weight: 600;
+}
+.filterbox.autunno .filteractives .badge {
+  background-color: #F54A00;
+  color: #fff;
+  margin-left: 1rem;
+}
+.filterbox.autunno .filteractives .badge:first-child {
+  margin-left: 0;
+}
+.filterbox.autunno .filteractives button {
+  color: #F54A00 !important;
+  margin-left: 0.5rem;
+}
+
+.progress-bar-section.autunno {
+  backdrop-filter: blur(2px);
+  background-color: rgba(150, 150, 150, 0.1);
+  border: 1px solid #C8C3B9;
+  box-shadow: 2px 2px 5px rgba(100, 100, 100, 0.3);
+}
+.progress-bar-section.autunno .progress-bar-bottle-container {
+  padding: 0.6rem;
+}
+.progress-bar-section.autunno .progress-bar-bottle-container .progress-card {
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  box-shadow: 2px 2px 5px rgba(100, 100, 100, 0.3);
+  position: relative;
+  background-color: #F6DCA1;
+}
+.progress-bar-section.autunno .progress-bar-bottle-container .progress-card .bottle {
+  position: absolute;
+  background-color: rgba(180, 205, 190, 0.5);
+  outline: 2px solid white;
+  outline-offset: 3px;
+  width: 30px;
+  height: 60px;
+  left: 50%;
+  bottom: 1.6rem;
+  transform: translateX(-50%);
+  display: flex;
+  justify-content: center;
+  align-items: end;
+  overflow: hidden;
+}
+.progress-bar-section.autunno .progress-bar-bottle-container .progress-card .bottle .bottle-fill {
+  width: 100%;
+  opacity: 0.9;
+}
+.progress-bar-section.autunno .progress-bar-bottle-container .progress-card .percentuale {
+  font-size: 0.7rem;
+  font-weight: 600;
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  transform: translateX(-50%);
+  color: #82181A;
+}
+.progress-bar-section.autunno .progress-bar-recap {
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0.3rem;
+}
+.progress-bar-section.autunno .progress-bar-recap span:nth-child(1) {
+  font-size: 0.7rem;
+  color: #6c757d;
+}
+.progress-bar-section.autunno .progress-bar-recap span:nth-child(2) {
+  font-size: 0.7rem;
+  color: #82181A;
+  font-weight: 600;
+}
+.progress-bar-section.autunno .progress-bar-recap span:nth-child(3) {
+  font-size: 0.7rem;
+  color: #82181A;
+}
+.progress-bar-section.autunno .go-to-details {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.2rem;
+  font-weight: 500;
+}
+.progress-bar-section.autunno .go-to-details:active {
+  background-color: rgba(100, 100, 100, 0.2);
+  color: white !important;
+}
+.progress-bar-section.autunno.completed {
+  backdrop-filter: blur(2px);
+  background-color: rgba(182, 255, 0, 0.3);
+  border: 1px solid #C8C3B9;
+  box-shadow: 2px 2px 5px rgba(100, 100, 100, 0.3);
+}
+.progress-bar-section.autunno.completed .progress-bar-bottle-container {
+  padding: 0.6rem;
+}
+.progress-bar-section.autunno.completed .progress-bar-bottle-container .progress-card {
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  box-shadow: 2px 2px 5px rgba(100, 100, 100, 0.3);
+  position: relative;
+  background-color: greenyellow;
+}
+.progress-bar-section.autunno.completed .progress-bar-bottle-container .progress-card .bottle {
+  position: absolute;
+  background-color: rgba(180, 205, 190, 0.5);
+  outline: 2px solid white;
+  outline-offset: 3px;
+  width: 30px;
+  height: 60px;
+  left: 50%;
+  bottom: 1.6rem;
+  transform: translateX(-50%);
+  display: flex;
+  justify-content: center;
+  align-items: end;
+  overflow: hidden;
+}
+.progress-bar-section.autunno.completed .progress-bar-bottle-container .progress-card .bottle .bottle-fill {
+  width: 100%;
+  opacity: 0.9;
+}
+.progress-bar-section.autunno.completed .progress-bar-bottle-container .progress-card .percentuale {
+  font-size: 0.7rem;
+  font-weight: 600;
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  transform: translateX(-50%);
+  color: #198754;
+}
+.progress-bar-section.autunno.completed .progress-bar-recap {
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0.3rem;
+}
+.progress-bar-section.autunno.completed .progress-bar-recap span:nth-child(1) {
+  font-size: 0.7rem;
+  color: #6c757d;
+}
+.progress-bar-section.autunno.completed .progress-bar-recap span:nth-child(2) {
+  font-size: 0.7rem;
+  color: #82181A;
+  font-weight: 600;
+}
+.progress-bar-section.autunno.completed .progress-bar-recap span:nth-child(3) {
+  font-size: 0.7rem;
+  color: #198754;
+}
+.progress-bar-section.autunno.completed .go-to-details {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.2rem;
+  font-weight: 500;
+  color: #198754;
+}
+.progress-bar-section.autunno.completed .go-to-details:active {
+  background-color: rgba(100, 100, 100, 0.2);
+  color: white !important;
+}
+
+.modal-footer.autunno {
+  border-top: 2px solid #F6DCA1;
+  margin-top: 2.5rem;
 }
 
 /*!
