--- a/Feel/Components/Form/FormRadio.razor
+++ b/Feel/Components/Form/FormRadio.razor
@@ -2,7 +2,7 @@
 
 <div class="@($"col-{Col} col-md-{ColMd}")">
     <div class="@($"form-group-radio {MainTheme}")">
-        @if (!string.IsNullOrWhiteSpace(Info))
+        @if (Info is not null)
         {
             <label>@LabelTitle <span><Icon Element="@Icons.Info" Color="@($"{MainTheme}")" ToolTip="@Info" /></span></label>
 
