--- a/Feel/Components/Form/EnumSelector.razor
+++ b/Feel/Components/Form/EnumSelector.razor
@@ -4,7 +4,7 @@
 
 <div class="@($"col-{Col} col-md-{ColMd}")">
     <div class="@($"form-group {MainTheme}")">
-        @if(!string.IsNullOrWhiteSpace(Info))
+        @if(Info is not null)
         {
             <label>@LabelTitle <span><Icon Element="@Icons.Info" Color="@($"{MainTheme}")" /></span></label>
             
