--- a/Feel/wwwroot/css/partials/_themes.scss
+++ b/Feel/wwwroot/css/partials/_themes.scss
@@ -56,7 +56,7 @@ $theme-colors: map-merge($theme-colors, (
   // AUTUNNO
   "autunno-feel-primary": $autunno-feel-primary,
   "autunno-feel-secondary": $autunno-feel-secondary,
-  "autunno-feel-ligh": $autunno-feel-light,
+  "autunno-feel-light": $autunno-feel-light,
   "autunno-feel-gray": $autunno-feel-gray,
   "autunno-feel-main-bg": $autunno-feel-main-bg,
   "autunno-text-disabled": $autunno-text-disabled,
@@ -65,7 +65,7 @@ $theme-colors: map-merge($theme-colors, (
   // INVERNO
   "inverno-feel-primary": $inverno-feel-primary,
   "inverno-feel-secondary": $inverno-feel-secondary,
-  "inverno-feel-ligh": $inverno-feel-light,
+  "inverno-feel-light": $inverno-feel-light,
   "inverno-feel-gray": $inverno-feel-gray,
   "inverno-feel-main-bg": $inverno-feel-main-bg,
   "inverno-text-disabled": $inverno-text-disabled,
@@ -74,7 +74,7 @@ $theme-colors: map-merge($theme-colors, (
   // PRIMAVERA
   "primavera-feel-primary": $primavera-feel-primary,
   "primavera-feel-secondary": $primavera-feel-secondary,
-  "primavera-feel-ligh": $primavera-feel-light,
+  "primavera-feel-light": $primavera-feel-light,
   "primavera-feel-gray": $primavera-feel-gray,
   "primavera-feel-main-bg": $primavera-feel-main-bg,
   "primavera-text-disabled": $primavera-text-disabled,
@@ -83,7 +83,7 @@ $theme-colors: map-merge($theme-colors, (
   // ESTATE
   "estate-feel-primary": $estate-feel-primary,
   "estate-feel-secondary": $estate-feel-secondary,
-  "estate-feel-ligh": $estate-feel-light,
+  "estate-feel-light": $estate-feel-light,
   "estate-feel-gray": $estate-feel-gray,
   "estate-feel-main-bg": $estate-feel-main-bg,
   "estate-text-disabled": $estate-text-disabled,
