--- a/Feel/wwwroot/css/partials/_allElements.scss
+++ b/Feel/wwwroot/css/partials/_allElements.scss
@@ -1,4 +1,87 @@
-﻿// ASSISTENTE //
+﻿$temi-feel: (
+  autunno: (
+    ultra-light: $autunno-feel-ultra-light,
+    primary:     $autunno-feel-primary,
+    secondary:   $autunno-feel-secondary,
+    light:       $autunno-feel-light,
+    gray:        $autunno-feel-gray
+  ),
+  inverno: (
+    ultra-light: $inverno-feel-ultra-light,
+    primary:     $inverno-feel-primary,
+    secondary:   $inverno-feel-secondary,
+    light:       $inverno-feel-light,
+    gray:        $inverno-feel-gray
+  ),
+  primavera: (
+    ultra-light: $primavera-feel-ultra-light,
+    primary:     $primavera-feel-primary,
+    secondary:   $primavera-feel-secondary,
+    light:       $primavera-feel-light,
+    gray:        $primavera-feel-gray
+  ),
+  estate: (
+    ultra-light: $estate-feel-ultra-light,
+    primary:     $estate-feel-primary,
+    secondary:   $estate-feel-secondary,
+    light:       $estate-feel-light,
+    gray:        $estate-feel-gray
+  )
+);
+
+
+@each $stagione, $valori in $temi-feel {
+    $ultra-light: map-get($valori, ultra-light);
+    $primary: map-get($valori, primary);
+    $secondary: map-get($valori, secondary);
+    $light: map-get($valori, light);
+    $gray: map-get($valori, gray);
+
+    .assistente.#{$stagione} {
+        @include assistente($ultra-light, $primary, $secondary);
+    }
+
+    .cm-checkbox.#{$stagione} {
+        @include checkbox-style($light, $primary);
+    }
+
+    .cm-toggle.#{$stagione} {
+        @include radio($light);
+    }
+
+    .dash-message.#{$stagione} {
+        @include dashboard-message($secondary);
+    }
+
+    .filterbox.#{$stagione} {
+        @include filtri($secondary, $ultra-light);
+    }
+
+    .progress-bar-section.#{$stagione} {
+        @include progress-card($light, $primary, $gray);
+    }
+
+    .recap.#{$stagione} {
+        @include recap($light);
+    }
+
+    .description.#{$stagione} {
+        @include recap-descrizione($light);
+    }
+
+    .modal-footer.#{$stagione} {
+        @include footer($light);
+    }
+
+    .tooltip-container.#{$stagione} {
+        @include tooltip($light, $primary);
+    }
+}
+
+
+
+
+/*// ASSISTENTE //
 
 .assistente {
     &.autunno {
@@ -82,4 +165,4 @@
     &.autunno {
         @include tooltip($autunno-feel-light, $autunno-feel-primary);
     }
-}
+}*/
