--- a/Feel/wwwroot/css/partials/_mixins.scss
+++ b/Feel/wwwroot/css/partials/_mixins.scss
@@ -58,6 +58,22 @@
     }
 }
 
+@mixin appear-and-resize($time) {
+    animation: appear-and-resize $time ease-in-out forwards;
+
+    @keyframes appear-and-resize {
+        from {
+            opacity: 0;
+            transform: scale(1.1);
+        }
+
+        to {
+            opacity: 1;
+            transform: scale(1);
+        }
+    }
+}
+
 // MESSAGGI ASSISTENTE
 
 @mixin messaggio-text($ultra-light, $primary, $secondary) {
