--- a/Feel/wwwroot/css/style.scss
+++ b/Feel/wwwroot/css/style.scss
@@ -55,6 +55,7 @@ input[type=number] {
 @import "partials/_dashboardMessage.scss";
 @import "partials/_recap.scss";
 @import "partials/_filter.scss";
+@import "partials/_setup.scss";
 // Classe con tutti gli elementi da aggiornare con i temi
 @import "partials/_allElements.scss";
 
